--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <meta name="description" content="Little Lemon - local restaurant"/>
+    <meta name="og:title" content="Little Lemon"/>
+    <meta name="og:description" content="local restaurant"/>
+    <meta name="og:image" content="Logo.svg"/>
+    <title>Little Lemon</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
